# src/swagger.json
@@ -472,7 +472,7 @@
 	},
 	"info": {
 		"title": "api",
-		"version": "1.6.1-3",
+		"version": "1.6.1-4",
 		"license": {
 			"name": "UNLICENSED"
 		},
@@ -480,7 +480,7 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/api/v1/account": {
+		"/auth/api/v1/account": {
 			"get": {
 				"operationId": "GetAccount",
 				"responses": {
@@ -625,7 +625,7 @@
 				}
 			}
 		},
-		"/api/v1/account/{id}": {
+		"/auth/api/v1/account/{id}": {
 			"get": {
 				"operationId": "GetAccountById",
 				"responses": {
@@ -677,7 +677,7 @@
 				]
 			}
 		},
-		"/api/v1/jwt": {
+		"/auth/api/v1/jwt": {
 			"post": {
 				"operationId": "Login",
 				"responses": {
@@ -734,7 +734,7 @@
 				}
 			}
 		},
-		"/api/v1/jwt/refresh": {
+		"/auth/api/v1/jwt/refresh": {
 			"post": {
 				"operationId": "Refresh",
 				"responses": {
@@ -791,7 +791,7 @@
 				"parameters": []
 			}
 		},
-		"/api/v1/jwt/authorize": {
+		"/auth/api/v1/jwt/authorize": {
 			"post": {
 				"operationId": "Authorize",
 				"responses": {
@@ -820,7 +820,7 @@
 				}
 			}
 		},
-		"/api/v1/jwt/certs": {
+		"/auth/api/v1/jwt/certs": {
 			"get": {
 				"operationId": "GetCerts",
 				"responses": {
@@ -839,7 +839,7 @@
 				"parameters": []
 			}
 		},
-		"/api/v1/jwt/providers": {
+		"/auth/api/v1/jwt/providers": {
 			"get": {
 				"operationId": "GetProviders",
 				"responses": {
@@ -858,7 +858,7 @@
 				"parameters": []
 			}
 		},
-		"/api/v1/jwt/{id}/providers": {
+		"/auth/api/v1/jwt/{id}/providers": {
 			"get": {
 				"operationId": "GetProvidersById",
 				"responses": {
